--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrder/Search.cshtml
@@ -51,8 +51,8 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrder">Create</button>
-                                <button class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrder">Edit</button>
-                                <button class="btn btn-info active" value="View" id="btnViewPurchaseOrder">View</button>
+                                <button class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrder">View</button>
+                                <button class="btn btn-info active" value="View" id="btnViewPurchaseOrder">Print</button>
                             </div>
 
                         </div>
@@ -72,6 +72,7 @@
                     <table class="table table-bordered table-hover" id="tblPurchaseOrder">
                         <thead>
                             <tr>
+                                <th></th>
                                 <th>Order No.</th>
                                 <th>Order Date</th>
                                 <th>Vendor</th>
