--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseOrderRequest/Search.cshtml
@@ -73,6 +73,7 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseOrderRequest">Create</button>
+                                <button role="button" class="btn btn-danger active" value="Edit" id="btnEditPurchaseOrderRequest">View</button>
                             </div>
 
                         </div>
@@ -92,9 +93,9 @@
                     <table class="table table-bordered table-hover" id="tblPurchaseOrderRequest">
                         <thead>
                             <tr>
+                                <th></th>
                                 <th>Branch</th>
                                 <th>Vendor</th>
-                                <th>Status</th>
                                 <th>Quantity</th>
                                 <th>Amount</th>
                             </tr>
