--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -2,9 +2,11 @@
 @using MyLeoRetailer.Common;
 @using MyLeoRetailerInfo.Common;
 
+<script src="~/Scripts/Modules/common_methods.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_events.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_methods.js"></script>
 <script src="~/Scripts/Modules/Receivable/Receivable_Validation.js"></script>
+
 
 <!-- START BREADCRUMB -->
 <ul class="breadcrumb" style="margin-bottom: 0px;">
