--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -42,7 +42,7 @@
                             <div class="form-group">
                                 <span class="label label-primary label-form" style="margin-bottom: 1px;">Debit Note No.</span>
                                 <input type="text" class="form-control" name="Filter.Debit_Note_No" placeholder="Enter debit note no. to search." />
-                                <input type="hidden" id="hdnPurchaseReturnId" name="PurchaseReturn.Purchase_Return_Id" value="@Model.PurchaseReturn.Purchase_Return_Id" />
+                                <input type="text" id="hdnPurchaseReturnId" name="PurchaseReturn.Purchase_Return_Id" value="@Model.PurchaseReturn.Purchase_Return_Id" />
                             </div>
 
                         </div>
@@ -51,6 +51,7 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
+                                <button role="button" href="@Url.Action("Invoice", "SalesOrder")" class="btn btn-info active" id="btnView" style="display:none">View Details</button>
                                 @*<button class="btn btn-danger active" value="Edit" id="btnEditPurchaseReturn">Edit</button>*@
                             </div>
 
@@ -71,6 +72,7 @@
                     <table class="table table-bordered table-hover" id="tblPurchaseReturn">
                         <thead>
                             <tr>
+                                <th></th>
                                 <th>Debit Note No.</th>
                                 <th>GR_No</th>
                                 <th>Vendor</th>
@@ -89,13 +91,14 @@
             </div>
         </div>
 
+        
         <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
 
         </div>
 
         <input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
-        <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
+       <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
 
         </div>
