--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseInvoice/Index.cshtml
@@ -53,7 +53,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Invoice Date.</span>
                                     @if (Model.PurchaseInvoice.Purchase_Invoice_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
@@ -85,7 +85,7 @@
 
 
                                 <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Challan Date.</span>
                                     @if (Model.PurchaseInvoice.Challan_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
@@ -168,7 +168,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Against Form Date.</span>
                                     @if (Model.PurchaseInvoice.Against_Form_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
@@ -208,7 +208,7 @@
                                 </div>
 
                                 <div class="form-group">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Packing Date.</span>
                                     @if (Model.PurchaseInvoice.Purchase_Packing_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
@@ -514,7 +514,7 @@
 
 
                                 <div class="form-group col-md-3">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Payment Due Date.</span>
                                     @if (Model.PurchaseInvoice.Payment_Due_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
@@ -578,7 +578,7 @@
 
 
                                 <div class="form-group col-md-3">
-                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">Purchase Order Date.</span>
+                                    <span class="label label-primary label-form" style="margin-bottom: 1px;">LR Date.</span>
                                     @if (Model.PurchaseInvoice.Lr_Date != DateTime.MinValue)
                                     {
                                         <div class="input-group date" id="dp-2" data-date="" data-date-format="dd-mm-yyyy">
