--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/Search.cshtml
@@ -51,7 +51,7 @@
 
                             <div class="btn-group">
                                 <button role="button" class="btn btn-success active" value="Create" id="btnCreatePurchaseReturn">Create</button>
-                                @*<button class="btn btn-danger active" value="Edit" id="btnEditPurchaseReturn">Edit</button>*@
+                                <button class="btn btn-danger active" value="Edit" id="btnEditPurchaseReturn">Edit</button>
                             </div>
 
                         </div>
@@ -65,7 +65,21 @@
 
         </div>
 
-        <div class="col-md-12" style="padding: 0px;" id="divTable">
+
+
+        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
+
+        </div>
+        
+        <div class="col-md-12" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
+
+
+        </div>
+
+
+
+
+        @*<div class="col-md-12" style="padding: 0px;" id="divTable">
             <div class="row">
                 <div class="table-responsive" style="width:100%; margin: 0px 0;">
                     <table class="table table-bordered table-hover" id="tblPurchaseReturn">
@@ -85,20 +99,16 @@
                         </thead>
                         <tbody></tbody>
                     </table>
-                </div><!-- /.col -->
+                </div>
             </div>
-        </div>
-
-        <div class="col-md-12" style="padding: 0px;" id="divDynamicTable">
-
-        </div>
-
-        <input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
+        </div>*@
+               
+        @*<input type="hidden" id="hdfCurrent_Page" name="@Model.Pager.CurrentPage" value="" />
 
         <div class="col-md-12 pagination" style="padding: 0px;text-align:center;" id="divPurchaseReturnPager">
 
 
-        </div>
+        </div>*@
 
     </div>
 
