--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturn/View_Purchase_Return_Details.cshtml
@@ -452,7 +452,7 @@
                         </div>
                     </div>
 
-                    <div class="row">
+                    @*<div class="row">
                         <div class="col-md-12" style="background: rgba(0, 0, 0, 0.02);padding-left: 20px; padding-right:0px; padding-top: 20px; padding-bottom: 20px; margin-bottom: 15px; border-top: 1px solid #DDD; border-bottom: 1px solid #DDD;">
                             <div class="btn-group">
                                 <button type="button" id="btnSavePurchaseReturn" class="btn btn-success active">Save</button>
@@ -461,7 +461,7 @@
                         </div>
                         <div class="col-md-12" style="padding-top: 40px; padding-left: 10px; padding-right: 10px;">
                         </div>
-                    </div>
+                    </div>*@
 
                 </div>
             </div>
