Commit changes file and Logger part

--- a/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/ViewPurchaseReturnRequest.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Transaction/PurchaseReturnRequest/ViewPurchaseReturnRequest.cshtml
@@ -132,7 +132,7 @@
                         </div>
 
                         <div class="block" style="border-top: 1px solid #DDD; padding-top: 10px; padding-bottom:0; margin-bottom: 0; padding-left: 0; padding-right: 0;">
-                            <h4 style="border-bottom: 1px; width: 190px; line-height: 24px; margin-left: 18px;">Purchase Return Request Details</h4>
+                            <h4 style="border-bottom: 1px; margin-left: 18px;">Purchase Return Request Details</h4>
                             <div class="table-responsive">
                                 <table class="table table-hover" style="margin-bottom: 0;">
                                     <thead>
