--- a/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Payable/Pay.cshtml
@@ -250,7 +250,7 @@
                         <div class="btn-group">
                             <button type="button" class="btn btn-success active" id="btnSavePay">Save</button>
 
-                            <button type="reset" class="btn btn-danger active">Cancel</button>
+                            <button type="reset" class="btn btn-danger active" onclick="javascript: Cancle();">Cancel</button>
                         </div>
 
                     </div>
