--- a/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
+++ b/MyLeoRetailer/Views/PostLogin/Master/Receivable/Pay.cshtml
@@ -104,7 +104,7 @@
                         <div class="form-group">
                             <span class="label label-primary label-form" style="margin-bottom: 1px;">Cheque Date</span>
                             <div class="input-group date" id="txtCheque_Date" data-date="" data-date-format="dd-mm-yyyy">
-                                <input type="text" class="form-control datepicker" name="Receivable.Cheque_Date" value="@((Model.Receivable.Cheque_Date == DateTime.MinValue ? "" : Model.Receivable.Cheque_Date.ToString("dd-MM-yyyy")))" reado readonly />
+                                <input type="text" class="form-control datepicker" name="Receivable.Cheque_Date" value="@((Model.Receivable.Cheque_Date == DateTime.MinValue ? "" : Model.Receivable.Cheque_Date.ToShortDateString()))"/>
                                 <span class="input-group-addon add-on"><span class="glyphicon glyphicon-calendar"></span></span>
                             </div>
                         </div>
@@ -264,7 +264,7 @@
                     <div class="btn-group">
                         <button type="button" class="btn btn-success active" id="btnSavePay">Save</button>
 
-                        <button type="reset" class="btn btn-danger active">Reset</button>
+                        <button type="reset" class="btn btn-danger active" onclick="javascript: Cancle();">Reset</button>
                     </div>
 
                 </div>
